--- a/wordpress/Chart.yaml
+++ b/wordpress/Chart.yaml
@@ -7,11 +7,11 @@ appVersion: "6.8.2"
 home: https://wordpress.org/
 icon: https://wordpress.org/favicon.ico
 sources:
-  - https://github.com/sammyeby/charts
+  - https://github.com/bysamio/charts
   - https://github.com/WordPress/WordPress
 maintainers:
   - name: BySam Charts
-    email: charts@bysam.dev
+    email: admin@bysam.io
 keywords:
   - wordpress
   - cms
