--- a/.github/workflows/release-charts.yml
+++ b/.github/workflows/release-charts.yml
@@ -35,13 +35,6 @@ jobs:
         with:
           version: v3.14.4
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Update chart dependencies
         run: |
           set -euo pipefail
@@ -72,32 +65,40 @@ jobs:
             echo "gh-pages branch already exists."
           fi
 
-      - name: Package Helm charts
-        run: |
-          set -euo pipefail
-          mkdir -p .cr-release-packages
-          for chart in mariadb memcached wordpress; do
-            helm package "$chart" --destination .cr-release-packages
-          done
-
-      - name: Push charts to OCI registry
-        run: |
-          set -euo pipefail
-          for package in .cr-release-packages/*.tgz; do
-            if [ -f "$package" ]; then
-              echo "Pushing $package to OCI registry..."
-              helm push "$package" oci://ghcr.io/${{ github.repository_owner }}/charts
-            fi
-          done
-
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
           charts_dir: .
           skip_existing: true
-          skip_packaging: true
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push charts to OCI registry
+        run: |
+          set -euo pipefail
+          # Find the packaged charts from chart-releaser
+          if [ -d ".cr-release-packages" ]; then
+            for package in .cr-release-packages/*.tgz; do
+              if [ -f "$package" ]; then
+                echo "Pushing $package to OCI registry..."
+                helm push "$package" oci://ghcr.io/${{ github.repository_owner }}/charts
+              fi
+            done
+          else
+            echo "No packaged charts found. Packaging now..."
+            for chart in mariadb memcached wordpress; do
+              package=$(helm package "$chart" | grep -oP '(?<=to: ).*')
+              echo "Pushing $package to OCI registry..."
+              helm push "$package" oci://ghcr.io/${{ github.repository_owner }}/charts
+            done
+          fi
 
       - name: Checkout gh-pages branch
         uses: actions/checkout@v4
