--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,5 +1,6 @@
 # Artifact Hub repository metadata file
 # https://github.com/artifacthub/hub/blob/master/docs/metadata/artifacthub-repo.yml
+repositoryID: bysamio
 owners:
   - name: bysamio
     email: admin@bysam.io
