--- a/wordpress/Chart.yaml
+++ b/wordpress/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: wordpress
-description: WordPress deployment with auto-installation using official Docker images
+description: WordPress deployment with auto-installation using official Docker images (wordpress:6.8.3-apache)
 type: application
-version: 1.0.8
+version: 1.0.9
 appVersion: "6.8.3"
 home: https://wordpress.org/
 icon: https://s.w.org/style/images/about/WordPress-logotype-wmark.png
