Fix TLS rendering issue in ingress template - version 1.0.10
- Fixed YAML parse error in ingress.yaml TLS section
- Removed trailing whitespace trim that caused 'hosts:-' invalid YAML
- Updated chart version to 1.0.10
- Resolves ArgoCD ComparisonError for ingress template parsing

--- a/wordpress/templates/ingress.yaml
+++ b/wordpress/templates/ingress.yaml
@@ -59,7 +59,7 @@ spec:
   tls:
     {{- if $hasDefaultTls }}
     - hosts:
-        {{- $host := tpl .Values.ingress.hostname $ -}}
+        {{- $host := tpl .Values.ingress.hostname $ }}
         - {{ $host | quote }}
         {{- if and .Values.ingress.tlsWwwPrefix (not (hasPrefix "www." $host)) }}
         - {{ printf "www.%s" $host | quote }}
