--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -152,6 +152,7 @@ containerSecurityContext:
   allowPrivilegeEscalation: false
   capabilities:
     drop: ["ALL"]
+    add: ["NET_BIND_SERVICE"] # Required to bind to port 80 as non-root user
   seccompProfile:
     type: "RuntimeDefault"
 
