--- a/wordpress/templates/deployment.yaml
+++ b/wordpress/templates/deployment.yaml
@@ -63,9 +63,55 @@ spec:
       {{- if .Values.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
-      {{- if .Values.initContainers }}
+      {{- if or .Values.initContainers (and .Values.containerPorts.http (ne (int .Values.containerPorts.http) 80)) }}
       initContainers:
+        {{- if and .Values.containerPorts.http (ne (int .Values.containerPorts.http) 80) }}
+        - name: apache-port-config
+          image: busybox:1.36
+          command: ['sh', '-c']
+          args:
+            - |
+              echo "Configuring Apache to listen on port {{ .Values.containerPorts.http }}"
+              cat > /shared/ports.conf << 'EOFAPACHE'
+              # Apache ports configuration for non-privileged ports
+              Listen {{ .Values.containerPorts.http }}
+              {{- if .Values.containerPorts.https }}
+              <IfModule ssl_module>
+                Listen {{ .Values.containerPorts.https }}
+              </IfModule>
+              {{- end }}
+              <IfModule mod_gnutls.c>
+                Listen {{ .Values.containerPorts.https }}
+              </IfModule>
+              EOFAPACHE
+              echo "Apache port configuration written to /shared/ports.conf"
+              cat /shared/ports.conf
+
+              # Also update the default VirtualHost to use the new port
+              cat > /shared/000-default.conf << 'EOFVHOST'
+              <VirtualHost *:{{ .Values.containerPorts.http }}>
+                ServerAdmin webmaster@localhost
+                DocumentRoot /var/www/html
+
+                <Directory /var/www/html>
+                  Options Indexes FollowSymLinks
+                  AllowOverride All
+                  Require all granted
+                </Directory>
+
+                ErrorLog ${APACHE_LOG_DIR}/error.log
+                CustomLog ${APACHE_LOG_DIR}/access.log combined
+              </VirtualHost>
+              EOFVHOST
+              echo "VirtualHost configuration written to /shared/000-default.conf"
+              cat /shared/000-default.conf
+          volumeMounts:
+            - name: apache-config
+              mountPath: /shared
+        {{- end }}
+        {{- if .Values.initContainers }}
         {{- include "common.tplvalues.render" (dict "value" .Values.initContainers "context" $) | nindent 8 }}
+        {{- end }}
       {{- end }}
       containers:
         - name: wordpress
@@ -221,6 +267,11 @@ spec:
             - name: apache-config
               mountPath: /etc/apache2/ports.conf
               subPath: ports.conf
+              readOnly: true
+            - name: apache-config
+              mountPath: /etc/apache2/sites-enabled/000-default.conf
+              subPath: 000-default.conf
+              readOnly: true
             {{- end }}
             {{- if .Values.extraVolumeMounts }}
             {{- include "common.tplvalues.render" (dict "value" .Values.extraVolumeMounts "context" $) | nindent 12 }}
@@ -284,8 +335,7 @@ spec:
         {{- end }}
         {{- if and .Values.containerPorts.http (ne (int .Values.containerPorts.http) 80) }}
         - name: apache-config
-          configMap:
-            name: {{ include "wordpress.fullname" . }}-apache-config
+          emptyDir: {}
         {{- end }}
         {{- if .Values.extraVolumes }}
         {{- include "common.tplvalues.render" (dict "value" .Values.extraVolumes "context" $) | nindent 8 }}
