--- a/wordpress/templates/deployment.yaml
+++ b/wordpress/templates/deployment.yaml
@@ -120,10 +120,70 @@ spec:
           {{- if .Values.containerSecurityContext.enabled }}
           securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 12 }}
           {{- end }}
-          {{- if .Values.command }}
+          {{- if and .Values.containerPorts.http (ne (int .Values.containerPorts.http) 80) }}
+          # Override entrypoint to ensure Apache uses our custom port configs
+          # The WordPress entrypoint script must run, but we need Apache to use our mounted configs
+          command: ["/bin/bash", "-c"]
+          args:
+            - |
+              # Verify our configs are mounted
+              if [ ! -f /etc/apache2/ports.conf ]; then
+                echo "ERROR: /etc/apache2/ports.conf not found!"
+                exit 1
+              fi
+              if [ ! -f /etc/apache2/sites-enabled/000-default.conf ]; then
+                echo "ERROR: /etc/apache2/sites-enabled/000-default.conf not found!"
+                exit 1
+              fi
+
+              echo "Verified Apache configs are mounted:"
+              echo "ports.conf:"
+              cat /etc/apache2/ports.conf
+              echo ""
+              echo "000-default.conf:"
+              cat /etc/apache2/sites-enabled/000-default.conf
+              echo ""
+
+              # Run WordPress entrypoint script to initialize WordPress (copy files, create wp-config.php)
+              # But redirect apache2-foreground to our wrapper
+              echo "Running WordPress entrypoint initialization..."
+              cd /var/www/html
+
+              # Run the WordPress entrypoint script normally - it handles file copying and wp-config.php
+              # But we'll start Apache ourselves after initialization to ensure it uses our mounted configs
+              cd /var/www/html
+
+              # Run entrypoint script to initialize WordPress, but don't start Apache yet
+              # The entrypoint script will copy files and create wp-config.php
+              /usr/local/bin/docker-entrypoint.sh apache2-foreground &
+              ENTRYPOINT_PID=$!
+
+              # Wait for WordPress initialization (files copied, wp-config.php created)
+              echo "Waiting for WordPress initialization..."
+              for i in {1..30}; do
+                if [ -f /var/www/html/wp-config.php ] && [ -f /var/www/html/index.php ]; then
+                  echo "WordPress initialization complete!"
+                  break
+                fi
+                if [ $i -eq 30 ]; then
+                  echo "WARNING: WordPress initialization took longer than expected"
+                fi
+                sleep 2
+              done
+
+              # Stop the entrypoint's Apache (it started on port 80)
+              echo "Stopping Apache started by entrypoint (port 80)..."
+              kill $ENTRYPOINT_PID 2>/dev/null || true
+              wait $ENTRYPOINT_PID 2>/dev/null || true
+              sleep 2
+
+              # Now start Apache with our mounted configs (port 8080)
+              echo "Starting Apache with custom port configuration (port 8080)..."
+              exec apache2-foreground
+          {{- else if .Values.command }}
           command: {{- include "common.tplvalues.render" (dict "value" .Values.command "context" $) | nindent 12 }}
           {{- end }}
-          {{- if .Values.args }}
+          {{- if and .Values.containerPorts.http (eq (int .Values.containerPorts.http) 80) .Values.args }}
           args: {{- include "common.tplvalues.render" (dict "value" .Values.args "context" $) | nindent 12 }}
           {{- end }}
           env:
