--- a/wordpress/templates/deployment.yaml
+++ b/wordpress/templates/deployment.yaml
@@ -65,50 +65,6 @@ spec:
       {{- end }}
       {{- if or .Values.initContainers (and .Values.containerPorts.http (ne (int .Values.containerPorts.http) 80)) }}
       initContainers:
-        {{- if and .Values.containerPorts.http (ne (int .Values.containerPorts.http) 80) }}
-        - name: apache-port-config
-          image: busybox:1.36
-          command: ['sh', '-c']
-          args:
-            - |
-              echo "Configuring Apache to listen on port {{ .Values.containerPorts.http }}"
-              cat > /shared/ports.conf << 'EOFAPACHE'
-              # Apache ports configuration for non-privileged ports
-              Listen {{ .Values.containerPorts.http }}
-              {{- if .Values.containerPorts.https }}
-              <IfModule ssl_module>
-                Listen {{ .Values.containerPorts.https }}
-              </IfModule>
-              {{- end }}
-              <IfModule mod_gnutls.c>
-                Listen {{ .Values.containerPorts.https }}
-              </IfModule>
-              EOFAPACHE
-              echo "Apache port configuration written to /shared/ports.conf"
-              cat /shared/ports.conf
-
-              # Also update the default VirtualHost to use the new port
-              cat > /shared/000-default.conf << 'EOFVHOST'
-              <VirtualHost *:{{ .Values.containerPorts.http }}>
-                ServerAdmin webmaster@localhost
-                DocumentRoot /var/www/html
-
-                <Directory /var/www/html>
-                  Options Indexes FollowSymLinks
-                  AllowOverride All
-                  Require all granted
-                </Directory>
-
-                ErrorLog ${APACHE_LOG_DIR}/error.log
-                CustomLog ${APACHE_LOG_DIR}/access.log combined
-              </VirtualHost>
-              EOFVHOST
-              echo "VirtualHost configuration written to /shared/000-default.conf"
-              cat /shared/000-default.conf
-          volumeMounts:
-            - name: apache-config
-              mountPath: /shared
-        {{- end }}
         {{- if .Values.initContainers }}
         {{- include "common.tplvalues.render" (dict "value" .Values.initContainers "context" $) | nindent 8 }}
         {{- end }}
@@ -121,65 +77,8 @@ spec:
           securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 12 }}
           {{- end }}
           {{- if and .Values.containerPorts.http (ne (int .Values.containerPorts.http) 80) }}
-          # Override entrypoint to ensure Apache uses our custom port configs
-          # The WordPress entrypoint script must run, but we need Apache to use our mounted configs
-          command: ["/bin/bash", "-c"]
-          args:
-            - |
-              # Verify our configs are mounted
-              if [ ! -f /etc/apache2/ports.conf ]; then
-                echo "ERROR: /etc/apache2/ports.conf not found!"
-                exit 1
-              fi
-              if [ ! -f /etc/apache2/sites-enabled/000-default.conf ]; then
-                echo "ERROR: /etc/apache2/sites-enabled/000-default.conf not found!"
-                exit 1
-              fi
-
-              echo "Verified Apache configs are mounted:"
-              echo "ports.conf:"
-              cat /etc/apache2/ports.conf
-              echo ""
-              echo "000-default.conf:"
-              cat /etc/apache2/sites-enabled/000-default.conf
-              echo ""
-
-              # Run WordPress entrypoint script to initialize WordPress (copy files, create wp-config.php)
-              # But redirect apache2-foreground to our wrapper
-              echo "Running WordPress entrypoint initialization..."
-              cd /var/www/html
-
-              # Run the WordPress entrypoint script normally - it handles file copying and wp-config.php
-              # But we'll start Apache ourselves after initialization to ensure it uses our mounted configs
-              cd /var/www/html
-
-              # Run entrypoint script to initialize WordPress, but don't start Apache yet
-              # The entrypoint script will copy files and create wp-config.php
-              /usr/local/bin/docker-entrypoint.sh apache2-foreground &
-              ENTRYPOINT_PID=$!
-
-              # Wait for WordPress initialization (files copied, wp-config.php created)
-              echo "Waiting for WordPress initialization..."
-              for i in {1..30}; do
-                if [ -f /var/www/html/wp-config.php ] && [ -f /var/www/html/index.php ]; then
-                  echo "WordPress initialization complete!"
-                  break
-                fi
-                if [ $i -eq 30 ]; then
-                  echo "WARNING: WordPress initialization took longer than expected"
-                fi
-                sleep 2
-              done
-
-              # Stop the entrypoint's Apache (it started on port 80)
-              echo "Stopping Apache started by entrypoint (port 80)..."
-              kill $ENTRYPOINT_PID 2>/dev/null || true
-              wait $ENTRYPOINT_PID 2>/dev/null || true
-              sleep 2
-
-              # Now start Apache with our mounted configs (port 8080)
-              echo "Starting Apache with custom port configuration (port 8080)..."
-              exec apache2-foreground
+          # Use custom entrypoint script from ConfigMap for non-privileged ports
+          command: ["/bin/bash", "/etc/apache2/custom-entrypoint.sh"]
           {{- else if .Values.command }}
           command: {{- include "common.tplvalues.render" (dict "value" .Values.command "context" $) | nindent 12 }}
           {{- end }}
@@ -324,6 +223,7 @@ spec:
               subPath: {{ .Values.persistence.subPath }}
               {{- end }}
             {{- if and .Values.containerPorts.http (ne (int .Values.containerPorts.http) 80) }}
+            # Mount Apache configs from ConfigMap
             - name: apache-config
               mountPath: /etc/apache2/ports.conf
               subPath: ports.conf
@@ -331,6 +231,11 @@ spec:
             - name: apache-config
               mountPath: /etc/apache2/sites-enabled/000-default.conf
               subPath: 000-default.conf
+              readOnly: true
+            # Mount custom entrypoint script
+            - name: apache-config
+              mountPath: /etc/apache2/custom-entrypoint.sh
+              subPath: custom-entrypoint.sh
               readOnly: true
             {{- end }}
             {{- if .Values.extraVolumeMounts }}
@@ -395,7 +300,9 @@ spec:
         {{- end }}
         {{- if and .Values.containerPorts.http (ne (int .Values.containerPorts.http) 80) }}
         - name: apache-config
-          emptyDir: {}
+          configMap:
+            name: {{ include "wordpress.fullname" . }}-apache-config
+            defaultMode: 0755
         {{- end }}
         {{- if .Values.extraVolumes }}
         {{- include "common.tplvalues.render" (dict "value" .Values.extraVolumes "context" $) | nindent 8 }}
