--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ COMPLETION_SUMMARY.md
 PRE_COMMIT_SETUP.md
 ARGOCD_UPDATE_GUIDE.md
 TROUBLESHOOTING_NET_BIND_SERVICE.md
+ARTIFACT_HUB_SETUP.md
+COMPLETE_SOLUTION_SUMMARY.md
+SUCCESS-SUMMARY.md
