--- a/wordpress/Chart.yaml
+++ b/wordpress/Chart.yaml
@@ -1,39 +1,24 @@
 apiVersion: v2
 name: wordpress
-description: WordPress deployment with auto-installation using official Docker images (wordpress:6.8.3-apache)
+description: A Helm chart for WordPress using the official WordPress Docker image
 type: application
-version: 1.0.18
-appVersion: "6.8.3"
-home: https://wordpress.org/
-icon: https://s.w.org/style/images/about/WordPress-logotype-wmark.png
-sources:
-  - https://github.com/bysamio/charts
-  - https://github.com/WordPress/WordPress
-maintainers:
-  - name: BySam Charts
-    email: admin@bysam.io
+version: 1.0.20
+appVersion: "6.9.0"
 keywords:
   - wordpress
   - cms
   - blog
-  - http
-  - web
-  - application
-  - php
+home: https://wordpress.org/
+sources:
+  - https://github.com/wordpress/wordpress
+maintainers:
+  - name: bysam.io
 dependencies:
   - name: mariadb
-    version: ~1.0.2
-    repository: "oci://ghcr.io/bysamio/charts"
+    version: "1.0.2"
+    repository: "https://bysamio.github.io/charts/"
     condition: mariadb.enabled
   - name: memcached
-    version: ~1.0.1
-    repository: "oci://ghcr.io/bysamio/charts"
+    version: "1.0.1"
+    repository: "https://bysamio.github.io/charts/"
     condition: memcached.enabled
-annotations:
-  category: CMS
-  licenses: GPL-2.0+
-  images: |
-    - name: wordpress
-      image: docker.io/wordpress:6.8.3-apache
-    - name: curl
-      image: docker.io/curlimages/curl:8.11.0
