fix(wordpress): v1.0.23 - NetworkPolicy, PDB, ServiceMonitor fixes
- Fix NetworkPolicy empty policyTypes when using extraIngress/extraEgress with allowExternal: false
- Fix PodDisruptionBudget to use only one of minAvailable or maxUnavailable (K8s requirement)
- Fix ServiceMonitor missing selector and namespaceSelector for Prometheus discovery
- Add YAML document separator (---) before ServiceMonitor
- Update version references in README.md and ARTIFACT_HUB_SETUP.md
- Add values-happyweb-IMPROVED.yaml to .gitignore (site-specific file)

Tested on Minikube with full deployment verification.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ TROUBLESHOOTING_NET_BIND_SERVICE.md
 ARTIFACT_HUB_SETUP.md
 COMPLETE_SOLUTION_SUMMARY.md
 SUCCESS-SUMMARY.md
+values-happyweb-IMPROVED.yaml
