fix(wordpress): v1.0.24 - Support mariadb.auth.existingSecret for DB password
- Fixed WORDPRESS_DB_PASSWORD to use mariadb.auth.existingSecret when set
- Both WordPress container and installer sidecar now respect existingSecret
- Uses mariadb.auth.password as the key name in the existing secret

Fixes: CreateContainerConfigError when using existingSecret for MariaDB auth

--- a/wordpress/templates/deployment.yaml
+++ b/wordpress/templates/deployment.yaml
@@ -135,8 +135,13 @@ spec:
           {{- if .Values.mariadb.enabled }}
           valueFrom:
             secretKeyRef:
+              {{- if .Values.mariadb.auth.existingSecret }}
+              name: {{ .Values.mariadb.auth.existingSecret }}
+              key: {{ .Values.mariadb.auth.password | default "mariadb-password" }}
+              {{- else }}
               name: {{ printf "%s-mariadb" .Release.Name }}
               key: mariadb-password
+              {{- end }}
           {{- else if .Values.externalDatabase.existingSecret }}
           valueFrom:
             secretKeyRef:
@@ -407,8 +412,13 @@ spec:
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
+              {{- if .Values.mariadb.auth.existingSecret }}
+              name: {{ .Values.mariadb.auth.existingSecret }}
+              key: {{ .Values.mariadb.auth.password | default "mariadb-password" }}
+              {{- else }}
               name: {{ printf "%s-mariadb" .Release.Name }}
               key: mariadb-password
+              {{- end }}
         - name: WORDPRESS_TABLE_PREFIX
           value: {{ .Values.wordpressTablePrefix | quote }}
         - name: WP_ADMIN_USER
